--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "yarn-run-all": "^3.1.1"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
     "p5": "^0.6.1",
     "underscore": "^1.9.1"
   }
